--- a/Z-resume-fr.tex
+++ b/Z-resume-fr.tex
@@ -111,7 +111,7 @@ Enfin, mes derniers travaux portent sur la modélisation des effets de transport
 \hfill
 \begin{subfigure}[b]{0.48\textwidth}
     \centering
-    \includegraphics[width=0.6\textwidth]{figures/5-diffusion/difflog_Df-uff298K_barrier.pdf}
+    \includegraphics[width=\textwidth]{figures/5-diffusion/difflog_Df-uff298K_barrier.pdf}
     \caption{PLD}\label{fgr:barrier_diffusion_b}
 \end{subfigure}
     \caption{ Scatterplots of the $\log_{10}$ of the diffusion coefficient (in \si{\square\cm\per\s}) compared to the barrier activation energy $E\e{a}$ in \si{\kJ\per\mol} (a) for all structures  and (b) for the structures with a PLD over \SI{6}{\angstrom}.}\label{fgr:barrier_diffusion}
